openshift/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-javascript-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: front-javascript
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front-javascript
        name: front-javascript-v1
        version: v1
    spec:
      containers:
      - env:
        - name: APP_REF_NAME
          value: jump-app
        - name: REACT_APP_BACK
          value: https://back-golang-v1-cicd.apps.acidonpe.sandbox1736.opentlc.com/jump
        image: image-registry.openshift-image-registry.svc:5000/cicd/front-javascript:develop
        imagePullPolicy: Always
        name: front-javascript-v1
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: front-javascript-v1
spec:
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: front-javascript
    version: v1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-javascript
spec:
  port:
    targetPort: http-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: front-javascript-v1
    weight: 100
  wildcardPolicy: None
